--- a/style.css
+++ b/style.css
@@ -8,11 +8,35 @@ h1 {
   text-align: center;
 }
 
-.grid {
-  width: inherit;
+div#grid{
+	background:#000;
+	border:#999 1px solid;
+	width: 535px;
+	height:400px;
+	padding:24px;
+	margin:0px auto;
+}
+div#grid > div{
+	background: cyan;
+	border:#000 1px solid;
+	width:71px;
+	height:71px;
+	float:left;
+	margin:10px;
+	padding:20px;
+	cursor:pointer;
+	text-align:center;
+}
+
+/*BUILDING BOARD WITH CSS & HTML*/
+
+/*.grid {
+  width: 550px;
   height: 100%;
   position: relative;
   perspective: 800px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .card {
@@ -38,21 +62,23 @@ h1 {
 }
 
 .card .back {
-  background: blue;
+  border: 5px blue solid;
   transform: rotateY( 180deg );
 }
 
 .card.flipped {
   transform: rotateY( 180deg );
-}
+}*/
 
-table {
+/*TABLE TRY*/
+
+/*table {
   border: 0 0;
   width: 50%;
   margin-right: auto;
   margin-left: auto;
 }
-
+*/
 
 
 /*.grid .card.flipped {
