--- a/style.css
+++ b/style.css
@@ -1,24 +1,47 @@
 body {
-  background-color: black;
-  color: white;
+  background-color: #fff;
+  color: #999;
   font-family: 'Helvetica', sans-serif;
+  position: fixed;
+  border-top: 10px solid rgb(80, 80, 80);
+  width: 100%;
+  height: 1em;
 }
 
 h1 {
   text-align: center;
 }
 
+h2 {
+  text-align: center;
+  font-size: 16px;
+  color: rgb(80, 80, 80);
+}
+
+button {
+  background-color: rgb(130, 92, 237);
+  border-radius: 3px;
+  border: none;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 13px;
+  color: white;
+  padding: 10px 10px;
+  margin: 10px 10px;
+  text-align: center;
+  margin-left: auto;
+}
+
 div#grid{
-	background:#000;
-	border:#999 1px solid;
+	background:#fff;
 	width: 535px;
 	height:400px;
-	padding:24px;
 	margin:0px auto;
 }
+
 div#grid > div{
-	background: cyan;
-	border:#000 1px solid;
+	background: teal;
+	border:#bbb 1px solid;
 	width:71px;
 	height:71px;
 	float:left;
@@ -26,7 +49,14 @@ div#grid > div{
 	padding:20px;
 	cursor:pointer;
 	text-align:center;
+  border-radius: 5px;
 }
+
+div#grid > div:hover{
+  color: #ccccff;
+  background-color: rgb(20, 20, 20);
+}
+
 
 /*BUILDING BOARD WITH CSS & HTML*/
 
