--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h2 {
   color: rgb(80, 80, 80);
 }
 
-button {
+button.deckBtn {
   background-color: rgb(130, 92, 237);
   border-radius: 3px;
   border: none;
@@ -29,14 +29,13 @@ button {
   padding: 10px 10px;
   margin: 10px 10px;
   text-align: center;
-  margin-left: auto;
+  width: 30%;
 }
 
 div#grid{
 	background:#fff;
 	width: 535px;
-	height:400px;
-	margin:0px auto;
+	margin: 0px auto;
 }
 
 div#grid > div{
@@ -57,7 +56,17 @@ div#grid > div:hover{
   background-color: rgb(20, 20, 20);
 }
 
+button:hover{
+  color: #ccccff;
+  background-color: rgb(20, 20, 20);
+}
 
+div#decks {
+  width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 40px;
+}
 /*BUILDING BOARD WITH CSS & HTML*/
 
 /*.grid {
