--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ div#instructions {
   margin-right: auto;
 }
 
-button.deckBtn {
+button.btn {
   background-color: rgb(194, 0, 0);
   border-radius: 3px;
   border: none;
@@ -42,7 +42,7 @@ button.deckBtn {
 }
 
 div#grid{
-	background:#fff;
+	background:#fff url()
 	width: 535px;
 	margin: 0px auto;
 }
