--- a/style.css
+++ b/style.css
@@ -1,33 +1,30 @@
 body {
-  border-top: 20px solid #247bbe;
+  background: white url("img/flag-bg.jpeg") no-repeat top;
+  border-top: 25px solid #247bbe;
   margin-top: -2px;
-  width: 100%;
-  background: #fff url("flagbggradient.jpg") no-repeat fixed top;
   color: rgb(80, 80, 80);
   font-family: 'Helvetica', sans-serif;
-  width: 100%;
 }
 
-h1 {
-  text-align: center;
+
+#container {
+  background: white;
+  width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 3px 15px 60px rgba(0, 0, 0, 0.79);
+  padding: 50px 50px;
 }
 
 p {
   text-align: center;
   font-size: 18px;
   font-weight: bold;
-  color: rgb(80, 80, 80);
-}
-
-
-div#instructions {
-  width: 400px;
-  margin-left: auto;
-  margin-right: auto;
+  color: #505050;
 }
 
 button.btn {
-  background-color: rgb(194, 0, 0);
+  background-color: #f23535;
   border-radius: 3px;
   border: none;
   text-decoration: none;
@@ -39,16 +36,25 @@ button.btn {
   text-align: center;
   margin-bottom: 20px;
   font-weight: bold;
+  opacity: 1.0;
+}
+
+
+button:hover{
+  color: #fff;
+  background-color: #141414;
 }
 
 div#grid{
-	background:#fff url()
-	width: 535px;
+	background:#fff;
 	margin: 0px auto;
+  width: 540px;
+  opacity: 1.0;
 }
 
+
 div#grid > div{
-	background: #247bbe;
+	background: #247bbe url("img/bernCardBack.png") no-repeat center;
 	border:#bbb 1px solid;
 	width:70px;
 	height:70px;
@@ -58,25 +64,20 @@ div#grid > div{
 	cursor:pointer;
 	text-align:center;
   border-radius: 5px;
+  opacity: 1.0;
 }
 
 div#grid > div:hover{
   color: #ccccff;
   background-color: rgb(20, 20, 20);
-  /*-webkit-transform:rotate(180deg);
-  -ms-transform:rotate(180deg);
-  transform:rotate(180deg);*/
 }
 
-button:hover{
-  color: #fff;
-  background-color: rgb(20, 20, 20);
-}
 
 div#decks {
   width: 150px;
   margin-left: auto;
   margin-right: auto;
+  opacity: 1.0;
 }
 
 footer {
@@ -86,7 +87,10 @@ footer {
   margin-right: auto;
   width: 100%;
   margin-top: 40px;
+  opacity: 1.0;
 }
+
+
 
 
 
