--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background: white url("img/flag-bg.png") no-repeat top;
   border-top: 25px solid #247bbe;
-  margin-top: -2px;
+  margin-top: -2px; /* avoid negative margins */
   color: rgb(80, 80, 80);
   font-family: 'Helvetica', sans-serif;
 }
@@ -47,7 +47,8 @@ button:hover{
 div#grid{
 	background:#fff;
 	margin: 0px auto;
-  width: 510px;
+	width: 510px;
+	/* be consistent with indentation */
 }
 
 
@@ -87,91 +88,9 @@ footer {
   opacity: 1.0;
 }
 
+/* Excellent to see your thought process in solving this problem,
+ * but please remove unused code before submitting in the future.
+ *
+ * Also EXCELLENT design and styles!!!
+ * */
 
-
-
-
-/*BUILDING BOARD WITH CSS & HTML*/
-
-/*.grid {
-  width: 550px;
-  height: 100%;
-  position: relative;
-  perspective: 800px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.card {
-  width: 100px;
-  height: 100px;
-  transform-style: preserve-3d;
-  transition: transform 1s;
-  float: left;
-  margin: 10px 10px;
-}
-
-.card .face {
-  margin: 0;
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-}
-
-.card .front {
-  background: red;
-}
-
-.card .back {
-  border: 5px blue solid;
-  transform: rotateY( 180deg );
-}
-
-.card.flipped {
-  transform: rotateY( 180deg );
-}*/
-
-/*TABLE TRY*/
-
-/*table {
-  border: 0 0;
-  width: 50%;
-  margin-right: auto;
-  margin-left: auto;
-}
-*/
-
-
-/*.grid .card.flipped {
--webkit-transform: rotatex(-180deg);
-}
-
-.grid .card .face {
-width: 100%;
-height: 100%;
-position: absolute;
--webkit-backface-visibility: hidden ;
-z-index: 2;
-font-family: Georgia;
-font-size: 1em;
-text-align: center;
-line-height: 100px;
-}
-
-.grid .card .front {
-position: absolute;
-z-index: 1;
-background: purple;
-color: white;
-cursor: pointer;
-}
-
-.grid .card .back {
--webkit-transform: rotatex(-180deg);
-background: blue;
-background: white;
-color: #247bbe;
-cursor: pointer;
-}*/
